Add Google Verification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Gerador de Lista de Presença | Excel A4 Grátis</title>
     <meta name="description"
         content="Crie listas de chamada personalizadas em Excel prontas para imprimir em A4. Ferramenta gratuita para professores. Formatação automática e rápida." />
+    <meta name="google-site-verification" content="-LW4C_Lgki0P-J-l-p1Y50OdGLLPky7tc9ghJ3nAj8k" />
     <meta name="keywords"
         content="gerador de chamada gratis, lista de presença excel, folha de chamada escolar, lista de presença para imprimir, gerador de lista a4, excel para professores" />
     <meta name="robots" content="index, follow" />
