--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Gerador de Lista" />
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1013230235877374"
+        crossorigin="anonymous"></script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://listadechamada.com/" />
